--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 * {
-  font-family: Arial , Helvetica, sans-serif;
+  font-family: Comic Sans MS , Helvetica, sans-serif;
   font-size: 3  0px;
 }
 
 body {
-  background-color: white;
+  background-color: black;
   padding: 60px;
 }
 
 input {
+  background-color: rgba(63, 57, 57, 0.836);
   color: gray;
   font-size: 1.2rem;
   width: 100%;
@@ -22,18 +23,39 @@ input {
 
 .card {
   align-content: center;
-  border: 1px solid grey;
+  border: 2px solid rgb(12, 190, 190);;
   border-radius: 6px;
   overflow: hidden;
   margin-bottom: 10px;
   margin-right: 10px;
+  background-color: rgb(41, 32, 32)  ;
 }
 
 .card p {
   padding: 5px;
   text-align: center;
+  font-size: 1.1rem;
+  font-family: Comic, Arial, Helvetica;
+  color: rgb(12, 190, 190);
 }
 
 .card img {
   max-height: 170px;
+}
+
+.titulo {
+  color: rgb(12, 190, 190);
+  font-size: 1.5rem;
+}
+
+.Gifs{
+  color: white;
+}
+
+.Sub{
+  color: white; 
+}
+
+h3 {
+  color: rgb(151, 146, 146);
 }
